manifests/xwiki/base/03-xwiki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xwiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xwiki
  template:
    metadata:
      labels:
        app: xwiki
    spec:
      containers:
        - name: xwiki
          image: xwiki:17.3.0-mysql-tomcat
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: xwiki-data
              mountPath: /usr/local/xwiki/data
      volumes:
        - name: xwiki-data
          persistentVolumeClaim:
            claimName: xwiki-data
