manifests/xwiki/base/04-service-xwiki.yaml
apiVersion: v1
kind: Service
metadata:
  name: xwiki
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: xwiki
